--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "node_modules/.bin/babel src/ --out-dir lib/",
-    "test": "node_modules/.bin/mocha --require babel-core/register ./test/",
-    "cover": "node_modules/.bin/istanbul cover --report lcov --dir=test/coverage node_modules/.bin/_mocha --require node_modules/babel-core/register ./test/",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./test/coverage/lcov.info | coveralls",
+    "test": "node_modules/.bin/jest --coverage",
+    "cover": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "coveralls": "npm run test && npm run cover",
     "lint": "node_modules/.bin/eslint -c .eslintrc src/"
   },
   "author": "Philip Knape",
@@ -22,19 +22,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
-    "chai": "^3.5.0",
     "coveralls": "^2.11.16",
     "eslint": "^3.14.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.3.0"
+    "jest": "^20.0.4"
   }
 }
